tests/compile_fail/any_requires_subpattern.cpp
#include <ptn/patternia.hpp>

int main() {
  auto p = ptn::any();
  (void)p;
  return 0;
}
